--- a/app/src/main/res/layout/activity_a_basket_page.xml
+++ b/app/src/main/res/layout/activity_a_basket_page.xml
@@ -139,7 +139,7 @@
             android:id="@+id/RE_장바구니"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/가로선"
+            app:layout_constraintBottom_toTopOf="@+id/두번째선"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/선"
@@ -147,14 +147,59 @@
             android:scrollbarSize="5dp"/>
 
         <ImageView
+            android:id="@+id/두번째선"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="400dp"
+            android:background="@color/colordarkgray"
+            app:layout_constraintTop_toBottomOf="@+id/선"
+
+            />
+
+        <LinearLayout
+
+            android:id="@+id/BT_payment"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/btn_blue"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/두번째선"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/가로선"
+            app:layout_constraintRight_toRightOf="parent"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/TV_totalCost"
+                android:visibility="gone"
+                android:text="100000"
+                android:textSize="30sp"
+                android:textColor="#ffffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/결제금액"
+                android:text="결제하기"
+                android:textSize="30sp"
+                android:textColor="#ffffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+
+        <ImageView
             android:id="@+id/가로선"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="400dp"
             android:background="@color/colordarkgray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/선" />
+            app:layout_constraintTop_toBottomOf="@id/BT_payment" />
 
 
         <ImageView
