--- a/app/src/main/res/layout/activity_a_payment_page.xml
+++ b/app/src/main/res/layout/activity_a_payment_page.xml
@@ -197,21 +197,39 @@
                         app:layout_constraintTop_toBottomOf="@id/food_item_image" />
 
 
-                    <TextView
-                        android:id="@+id/food_item_price"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="10dp"
-                        android:gravity="center"
-                        android:fontFamily="sans-serif-black"
-                        android:text="$10"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:orientation="horizontal"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/food_item_name"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/food_item_name">
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="￦"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="15sp"/>
+
+                        <TextView
+                            android:id="@+id/food_item_price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="10000"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="15sp"/>
+
+                    </LinearLayout>
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
