--- a/app/src/main/res/layout/activity_b_add_item.xml
+++ b/app/src/main/res/layout/activity_b_add_item.xml
@@ -46,28 +46,56 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.627" />
 
+
+
+    <TextView
+        android:id="@+id/원화"
+        android:text="￦"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/ET_상품가격입력"
+        app:layout_constraintBottom_toBottomOf="@id/ET_상품가격입력"
+
+        app:layout_constraintHorizontal_bias="0.0"
+        />
+
     <EditText
         android:id="@+id/ET_상품명입력"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="상품명입력"
+        android:layout_marginStart="28dp"
         app:layout_constraintBottom_toTopOf="@+id/ET_상품가격입력"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/ET_상품가격입력"
         app:layout_constraintTop_toBottomOf="@id/IV_상품사진" />
 
     <EditText
         android:id="@+id/ET_상품가격입력"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
         android:layout_marginBottom="100dp"
         android:hint="상품가격입력"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/원화"
         app:layout_constraintTop_toBottomOf="@+id/ET_상품명입력" />
+
+    <EditText
+        android:id="@+id/ET_상품수량입력"
+        android:visibility="gone"
+        android:text="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/ET_상품가격입력"
+        app:layout_constraintTop_toBottomOf="@id/ET_상품가격입력"
+        android:hint="묶음 수량 입력"
+        />
 
     <Button
         android:id="@+id/BT_확인"
