--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -10,8 +10,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="-235dp">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-249dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -56,13 +56,13 @@
                 android:id="@+id/TV_장바구니"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                app:layout_constraintTop_toBottomOf="@id/광고창"
+                android:background="#00ff0000"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="장바구니"
                 app:layout_constraintLeft_toRightOf="@id/TV_회원가입"
                 app:layout_constraintRight_toRightOf="parent"
-                android:text="장바구니"
-                android:gravity="center"
-                android:clickable="true"
-                android:background="#00ff0000"/>
+                app:layout_constraintTop_toBottomOf="@id/광고창" />
 
             <ImageView
                 android:id="@+id/사진배경"
@@ -79,8 +79,8 @@
                 android:layout_width="150dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="50dp"
-                android:src="@drawable/blueberryicon"
                 android:clickable="true"
+                android:src="@drawable/blueberryicon"
                 app:layout_constraintBottom_toBottomOf="@id/사진배경"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintLeft_toLeftOf="@id/사진배경"
@@ -93,13 +93,13 @@
                 android:id="@+id/BT_이용후기"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                app:layout_constraintTop_toBottomOf="@id/사진배경"
+                android:background="#00ff0000"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="상품리뷰"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/BT_매거진"
-                android:clickable="true"
-                android:text="상품리뷰"
-                android:gravity="center"
-                android:background="#00ff0000"/>
+                app:layout_constraintTop_toBottomOf="@id/사진배경" />
 
 
             <androidx.appcompat.widget.AppCompatButton
@@ -132,11 +132,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="120dp"
                 android:visibility="gone"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/상품목록"
@@ -156,8 +155,6 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/colordarkgray"
                 app:layout_constraintTop_toBottomOf="@id/상품목록" />
-
-
 
 
             <androidx.recyclerview.widget.RecyclerView
