--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -154,7 +154,6 @@
                 android:layout_height="wrap_content"
 
 
-
                 app:cardBackgroundColor="#ffffffff"
                 app:cardCornerRadius="50dp"
                 app:cardElevation="10dp"
@@ -186,32 +185,50 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:textColor="@color/colorblue"
                         android:fontFamily="cursive"
-                        android:textStyle="bold"
+                        android:gravity="center"
                         android:text="과일명"
+                        android:textColor="@color/colorblue"
                         android:textSize="18sp"
+                        android:textStyle="bold"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/food_item_image" />
 
 
-                    <TextView
-                        android:id="@+id/food_item_price"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="10dp"
-                        android:gravity="center"
-                        android:fontFamily="sans-serif-black"
-                        android:text="$10"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="15sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:orientation="horizontal"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/food_item_name"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/food_item_name">
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="￦"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="15sp"/>
+
+                        <TextView
+                            android:id="@+id/food_item_price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="10000"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="15sp"/>
+
+                    </LinearLayout>
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -219,27 +236,27 @@
 
             </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/BT_장바구니추가"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
-            android:text="장바구니추가"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/BT_바로구매"
-            app:layout_constraintTop_toBottomOf="@+id/카드"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/BT_장바구니추가"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:text="장바구니추가"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/BT_바로구매"
+                app:layout_constraintTop_toBottomOf="@+id/카드" />
 
-        <Button
-            android:id="@+id/BT_바로구매"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20sp"
-            android:text="바로구매"
-            app:layout_constraintLeft_toRightOf="@+id/BT_장바구니추가"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/카드"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            <Button
+                android:id="@+id/BT_바로구매"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:text="바로구매"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/BT_장바구니추가"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/카드" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
