--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -19,7 +19,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="294dp"
@@ -40,12 +39,12 @@
 
             <TextView
                 android:id="@+id/food_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:fontFamily="cursive"
                 android:gravity="center"
                 android:textColor="@color/colorblue"
-                android:fontFamily="cursive"
                 android:textStyle="bold"
                 android:text="과일명"
                 android:textSize="18sp"
@@ -53,20 +52,35 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/food_item_image" />
 
-
-            <TextView
-                android:id="@+id/food_item_price"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-black"
-                android:text="$10"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="15sp"
+                android:orientation="horizontal"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/food_item_name" />
+                app:layout_constraintTop_toBottomOf="@id/food_item_name">
+
+                <TextView
+                    android:id="@+id/원화"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="￦"
+                    android:textSize="15sp" />
+
+
+                <TextView
+                    android:id="@+id/food_item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="center"
+                    android:text="10000"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="15sp"/>
+
+
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
