--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -22,6 +22,7 @@
                 android:gravity="center"
                 android:src="@drawable/adver"
                 app:layout_constraintBottom_toTopOf="@id/TV_로그인"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -155,7 +156,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BT_로그인박스"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="90dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
                 android:clickable="true"
@@ -166,6 +167,10 @@
                 app:layout_constraintLeft_toRightOf="@id/ET_Email"
                 app:layout_constraintRight_toRightOf="@id/로그인배경"
                 app:layout_constraintTop_toTopOf="@id/로그인배경" />
+
+
+
+
 
             <EditText
                 android:id="@+id/ET_Email"
@@ -236,6 +241,15 @@
 
 
 
+            <com.kakao.usermgmt.LoginButton
+                android:id="@+id/BT_kakao로그인박스"
+                android:layout_marginTop="10dp"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/로그인배경" />
+
 
 
             <androidx.appcompat.widget.AppCompatButton
@@ -247,10 +261,10 @@
                 android:text="아이디 / 패스워드 찾기"
                 android:textColor="@color/colorPrimary"
                 android:textSize="15dp"
-                app:layout_constraintHorizontal_bias="0.516"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/로그인배경" />
+                app:layout_constraintTop_toBottomOf="@id/BT_kakao로그인박스" />
 
             <ImageView
                 android:id="@+id/BT_아패찾기Box"
@@ -277,11 +291,18 @@
                 android:id="@+id/비회원설명"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
-                android:text="회원이 되시면 신 상품 정보와 다양한                                                         할인 혜택을 받으실 수 있습니다."
+                android:text="회원이 되시면 신 상품 정보와 다양한"
                 app:layout_constraintEnd_toEndOf="@+id/BT_아패찾기Box"
                 app:layout_constraintLeft_toLeftOf="@id/비회원이신가요"
                 app:layout_constraintStart_toStartOf="@+id/BT_아패찾기Box"
                 app:layout_constraintTop_toBottomOf="@id/비회원이신가요" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="할인 혜택을 받으실 수 있습니다."
+                app:layout_constraintTop_toBottomOf="@+id/비회원설명"
+                app:layout_constraintLeft_toLeftOf="@+id/비회원설명"
+                />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/BT_회원가입"
