Last Commit - doneKakaoLogin

--- a/app/src/main/res/layout/activity_a_basket_page.xml
+++ b/app/src/main/res/layout/activity_a_basket_page.xml
@@ -173,7 +173,6 @@
 
             <TextView
                 android:id="@+id/TV_totalCost"
-                android:visibility="gone"
                 android:text="100000"
                 android:textSize="30sp"
                 android:textColor="#ffffffff"
@@ -182,7 +181,7 @@
 
             <TextView
                 android:id="@+id/결제금액"
-                android:text="결제하기"
+                android:text="원 결제하기"
                 android:textSize="30sp"
                 android:textColor="#ffffffff"
                 android:layout_width="wrap_content"
