--- a/app/src/main/res/layout/activity_forgot_page.xml
+++ b/app/src/main/res/layout/activity_forgot_page.xml
@@ -133,6 +133,51 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/colordarkgray"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="20dp"
+            android:text="확인 버튼을 누르면 입력된 \n이메일로 비밀번호 수정 메일이 전송됩니다."
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/선"
+            />
+
+
+
+        <EditText
+            android:id="@+id/ET_Forgot_Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:hint="이메일을 입력해주세요."
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/선"
+            />
+
+
+
+        <Button
+            android:id="@+id/BT_비밀번호찾기"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20sp"
+            android:text="확인"
+            app:layout_constraintTop_toBottomOf="@+id/ET_Forgot_Email"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+
+
+            />
+
+
+
+
+
         <ImageView
             android:id="@+id/가로선"
             android:layout_width="match_parent"
