--- a/app/src/main/res/layout/activity_signup_page2.xml
+++ b/app/src/main/res/layout/activity_signup_page2.xml
@@ -230,6 +230,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:ems="10"
+                android:maxLength="16"
                 android:hint="비밀번호"
                 android:inputType="textPassword" />
 
@@ -238,6 +239,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:maxLength="16"
                 android:ems="10"
                 android:hint="비밀번호 확인"
                 android:inputType="textPassword" />
