--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colordarkyellow">#C6AD37</color>
     <color name="colorblue">#566EDB</color>
     <color name="colordarkblue">#3B4A8A</color>
+    <color name="colorwhite">#FFFFFF</color>
 </resources>
