--- a/app/src/main/res/layout/activity_a__writing__page.xml
+++ b/app/src/main/res/layout/activity_a__writing__page.xml
@@ -4,10 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".A_qna_writing_page">
+    tools:context=".A_Writing_Page">
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/CB_QNA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
+        android:textSize="15sp"
+        android:text="질문 작성"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/BT_사진추가"
+        />
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/CB_REVIEW"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:text="상품 후기 작성"
+        app:layout_constraintLeft_toLeftOf="@id/CB_QNA"
+        app:layout_constraintTop_toBottomOf="@id/CB_QNA"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/QnA_Title"
+        android:id="@+id/Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -37,7 +57,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/QnA_Writing"
+        android:id="@+id/Writing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -45,7 +65,7 @@
         android:layout_marginTop="10dp"
 
         app:counterMaxLength="100"
-        app:layout_constraintTop_toBottomOf="@+id/QnA_Title"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
@@ -88,14 +108,13 @@
         android:layout_marginRight="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         />
 
     <Button
-        android:id="@+id/BT_QnA_확인"
+        android:id="@+id/BT_확인"
         android:layout_width="300sp"
         android:layout_height="50sp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/btn_blue"
         android:text="확인"
         android:textColor="#ffffffff"
