--- a/app/src/main/res/layout/qna_list.xml
+++ b/app/src/main/res/layout/qna_list.xml
@@ -14,95 +14,76 @@
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="294dp"
+            android:layout_gravity="center"
             android:orientation="horizontal">
 
 
-
-
-            <TextView
-                android:id="@+id/qna_id"
-                app:layout_constraintHorizontal_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintRight_toRightOf="@id/abc"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_chainStyle="spread"
+            <ImageView
+                android:id="@+id/food_item_image"
+                android:layout_width="175dp"
+                android:layout_height="173dp"
+                android:layout_marginTop="10sp"
                 android:padding="5dp"
-                android:textAlignment="center"
-                android:text="회원 아아디"
-               android:textStyle="bold"/>
-
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/abc"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="7dp"
-                android:layout_weight="1"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@mipmap/ic_launcher"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/food_item_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:textColor="@color/colorblue"
+                android:textStyle="bold"
+                android:text="과일명"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/food_item_image" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/food_item_name">
 
                 <TextView
-                    android:id="@+id/TV_제목"
+                    android:id="@+id/원화"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="제목 : "
-                    android:textSize="30sp"
-                    android:textStyle="normal"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/qna_writing"
-                    app:layout_constraintRight_toLeftOf="@+id/qna_title"
-
-                    />
+                    android:text="￦"
+                    android:textSize="15sp" />
 
 
                 <TextView
-                    android:id="@+id/qna_title"
-                    android:layout_width="302dp"
-                    android:layout_height="34dp"
-                    android:layout_marginTop="10dp"
-                    android:text="제목"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/TV_제목"
-                    app:layout_constraintLeft_toRightOf="@+id/TV_제목"
-                    app:layout_constraintTop_toTopOf="@+id/TV_제목" />
-
-                <TextView
-                    android:id="@+id/qna_writing"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
+                    android:id="@+id/food_item_price"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="글"
-                    android:textColor="#ff0000ff"
-                    android:textSize="15sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/qna_title"/>
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="center"
+                    android:text="10000"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="15sp"/>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
