--- a/app/src/main/res/layout/review_list.xml
+++ b/app/src/main/res/layout/review_list.xml
@@ -5,9 +5,29 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/작성자글귀"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="작성자 : "
+        app:layout_constraintBottom_toBottomOf="@+id/TV_userName"
+        app:layout_constraintRight_toLeftOf="@+id/TV_userName"
+        app:layout_constraintTop_toTopOf="@+id/TV_userName" />
+
+    <TextView
+        android:id="@+id/TV_userName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:text="최정훈"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         app:cardBackgroundColor="#ffffffff"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
@@ -29,6 +49,8 @@
                 android:id="@+id/food_item_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:maxWidth="150dp"
+                android:maxHeight="150dp"
                 android:padding="5dp"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -61,8 +83,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="cursive"
                     android:gravity="center"
-                    android:text="안녕하세요최정훈입니다람"
                     android:maxLength="12"
+                    android:text="안녕하세요최정훈입니다람"
                     android:textColor="@color/colorblue"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -91,13 +113,40 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-black"
-
                     android:text="만나서 반가워요"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="15sp" />
 
-
             </LinearLayout>
+
+            <Button
+                android:id="@+id/BT_수정"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/btn_blue"
+                android:text="수정"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/IV_삭제" />
+
+<!--            <Button-->
+<!--                android:id="@+id/BT_삭제"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:background="@drawable/btn_blue"-->
+<!--                android:text="삭제"-->
+<!--                android:visibility="gone"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintRight_toRightOf="parent" />-->
+
+            <ImageView
+                android:id="@+id/IV_삭제"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
