--- a/app/src/main/res/layout/activity_a_review_page_clicked.xml
+++ b/app/src/main/res/layout/activity_a_review_page_clicked.xml
@@ -118,9 +118,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RC_Review"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/댓글윗선" />
@@ -129,7 +128,6 @@
             android:id="@+id/댓글아랫선"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginTop="10dp"
             android:background="@color/colordarkgray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
